<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ED791C"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/languagePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="Please select your preferred language:"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/English"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:backgroundTint="#FFFFFF"
        android:cursorVisible="false"
        android:ellipsize="none"
        android:padding="10dp"
        android:paddingBottom="20dp"
        android:text="@string/english"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:textColorLink="#050000"
        android:textStyle="bold"
        app:cornerRadius="?android:attr/primaryContentAlpha"
        app:iconTint="#000000" />

    <Button
        android:id="@+id/Hindi"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:backgroundTint="#ffffff"
        android:cursorVisible="false"
        android:ellipsize="none"
        android:padding="10dp"
        android:paddingBottom="20dp"
        android:text="@string/hindi"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:textColorLink="#050000"
        android:textStyle="bold"
        app:cornerRadius="?android:attr/primaryContentAlpha" />

    <Button
        android:id="@+id/Marathi"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:backgroundTint="#FFFFFF"
        android:cursorVisible="false"
        android:ellipsize="none"
        android:padding="10dp"
        android:paddingBottom="20dp"
        android:text="@string/marathi"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:textColorLink="#050000"
        android:textStyle="bold"
        app:cornerRadius="?android:attr/primaryContentAlpha" />

    <Button
        android:id="@+id/Gujarati"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:backgroundTint="#FFFFFF"
        android:cursorVisible="false"
        android:ellipsize="none"
        android:padding="10dp"
        android:paddingBottom="20dp"
        android:text="@string/gujarati"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:textColorLink="#050000"
        android:textStyle="bold"
        app:cornerRadius="?android:attr/primaryContentAlpha"
        app:iconTint="#050000"
        app:rippleColor="#040404" />

    <Button
        android:id="@+id/Kannada"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_elevation"
        android:backgroundTint="#FFFFFF"
        android:cursorVisible="false"
        android:ellipsize="none"
        android:padding="10dp"
        android:paddingBottom="20dp"
        android:text="@string/kannada"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:textColorLink="#050000"
        android:textStyle="bold"
        app:cornerRadius="?android:attr/primaryContentAlpha"
        app:rippleColor="#000000"
        app:strokeColor="#0B0B0B" />
</LinearLayout>
